[gd_scene load_steps=5 format=2]

[ext_resource path="res://vehicles/BaseVehicle.gd" type="Script" id=1]
[ext_resource path="res://vehicles/SuspensionsContainer.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=1]


[sub_resource type="ConvexPolygonShape" id=2]

points = PoolVector3Array( -1, 0.5, 1.5, 1, 0.5, -1.5, 1, 0.5, 1.5, -1, 0.5, -1.5, -1, -0.5, 1.5, 1, -0.5, -1.5, 1, -0.5, 1.5, -1, -0.5, -1.5, 1, 0.5, 1.5, -1, 0.5, -1.5, 1, 0.5, -1.5, -1, 0.5, 1.5, 1, -0.5, 1.5, -1, -0.5, -1.5, 1, -0.5, -1.5, -1, -0.5, 1.5, 1, 0.5, 1.5, -1, -0.5, 1.5, -1, 0.5, 1.5, 1, -0.5, 1.5, 1, 0.5, -1.5, -1, -0.5, -1.5, -1, 0.5, -1.5, 1, -0.5, -1.5 )

[node name="BaseVehicle" type="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.23725, 0 )
physics_material_override = SubResource( 1 )
gravity_scale = 3.0
linear_damp = 0.99
angular_damp = 0.99
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 2 )

[node name="Mesh" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="SuspensionsContainer" type="Spatial" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
script = ExtResource( 2 )
force = 12.0

[node name="FrontRight" type="RayCast" parent="SuspensionsContainer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -0.5, 1.5 )
enabled = true

[node name="FrontLeft" type="RayCast" parent="SuspensionsContainer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -0.5, 1.5 )
enabled = true

[node name="RearRight" type="RayCast" parent="SuspensionsContainer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -0.5, -1.5 )
enabled = true

[node name="RearLeft" type="RayCast" parent="SuspensionsContainer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -0.5, -1.5 )
enabled = true

[node name="ForcePosition" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0959475, 0.5 )

[node name="WeaponMounting" type="Spatial" parent="."]

